# BreezeApp

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md  Roadmap.md  jitpack.yml  settings.gradle.kts
.cursor/: mcp.json
.github/workflows/: on_pr_build.yaml
Android/: ARCHITECTURE.md  README.md  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/test/: README.md
Android/gradle/wrapper/: gradle-wrapper.properties
BreezeApp/: .gitignore  README.md  check-compile.sh  gradle.properties  settings.gradle.kts
BreezeApp/app/: build.gradle.kts
BreezeApp/app/src/debug/: AndroidManifest.xml
BreezeApp/app/src/main/: AndroidManifest.xml
BreezeApp/docs/: KEYSTORE_SETUP.md  QUICK_START.md  RELEASE_BUILD.md  SIGNING.md
BreezeApp/docs/i18n/: README_zh.md
BreezeApp/gradle/: libs.versions.toml
BreezeApp/scripts/: keystore.properties.template  release-build.sh  setup-keystore.sh
BreezeApp/test-scripts/: run-tests.sh  run-ui-tests.sh
BreezeApp_v2/: .gitignore  README.md  settings.gradle.kts  test_connection.sh
BreezeApp_v2/EdgeAI/: ARCHITECTURE.md  MIGRATION_PROGRESS_TRACKER_V2.md  README.md  build.gradle.kts
BreezeApp_v2/EdgeAI/docs/: API_REFERENCE.md  ARCHITECTURE.md  Automatic Speech Recognition (ASR).md  BEST_PRACTICES.md  ERROR_HANDLING.md  EdgeAI_JitPack_SOP.md  ErrorType.md  GETTING_STARTED.md  Generate Chat Completion.md  Text-to-Speech (TTS) Generation.md
BreezeApp_v2/breeze-app-router/: ModelDownload_Improvement_Plan.md  README.md  build.gradle.kts  proguard-rules.pro
BreezeApp_v2/breeze-app-router-client/: MIGRATION_COMPLETE.md  README.md  build.gradle.kts
BreezeApp_v2/breeze-app-router-client/docs/: integration-guide.md
BreezeApp_v2/breeze-app-router-client/src/main/: AndroidManifest.xml
BreezeApp_v2/breeze-app-router/docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_GUIDELINES.md  CODE_QUALITY_IMPROVEMENTS.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  FOREGROUND_SERVICE_ARCHITECTURE_UPGRADE.md  GETTING_STARTED.md  HEADLESS_TESTING_GUIDE.md  INTEGRATION_GUIDE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  ROUTER_CLIENT_NOTIFICATION_OPTIMIZATION_PLAN.md  ROUTER_STATUS_NOTIFICATION_DESIGN.md  RUNNER_DEVELOPMENT.md
BreezeApp_v2/breeze-app-router/docs/ai_router_spec/: PROJECT-STATUS.md  README.md
BreezeApp_v2/breeze-app-router/docs/diagrams/: architecture.mmd  data-flow.mmd  dependency.mmd  runner-lifecycle.mmd
BreezeApp_v2/breeze-app-router/docs/examples/: basic-usage.kt  custom-runner.kt  streaming-example.kt
BreezeApp_v2/breeze-app-router/src/debug/: AndroidManifest.xml
BreezeApp_v2/breeze-app-router/src/main/: AndroidManifest.xml
BreezeApp_v2/docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  api-reference.md  client-api-spec.md  developer-guide.md  index.md  quick-start.md  refactoring_plan.md  testing-guide.md
BreezeApp_v2/docs/ai_router_spec/01-Architecture/: README.md
BreezeApp_v2/docs/ai_router_spec/02-Interfaces/: README.md  capability-mapping.md  runner-interface.md  runner-specifications.md
BreezeApp_v2/docs/ai_router_spec/03-Models/: model-config-specification.md
BreezeApp_v2/docs/ai_router_spec/04-Runtime/: dispatcher-workflow.md
BreezeApp_v2/docs/ai_router_spec/05-Error-Handling/: README.md  error-codes.md
BreezeApp_v2/docs/ai_router_spec/06-Testing/: test-scenarios.md
BreezeApp_v2/docs/reference/: refactoring_plan.md
BreezeApp_v2/shared-contracts/: README.md  build.gradle.kts  proguard-rules.pro
BreezeApp_v2/shared-contracts/docs/: api.md
breeze-app/: build.gradle.kts  gradle.properties
breeze-app-kotlin/: .gitignore
breeze-app-kotlin/app/: build.gradle.kts
breeze-app-kotlin/docs/: api.md
breeze-app-kotlin/gradle/: libs.versions.toml
breeze-app-router/: build.gradle.kts  settings.gradle.kts
breeze-app-router/app/: build.gradle.kts
breeze-app-router/gradle/: libs.versions.toml
breeze-app-ui/: settings.gradle.kts
breeze-app-ui/app/: build.gradle.kts
breeze-app-ui/gradle/: libs.versions.toml
breeze-app/app/: .gitignore  build.gradle.kts  google-services.json
breeze-app/app/src/main/cpp/: CMakeLists.txt  breeze_llm_jni.cpp  crashlytics_init.h  jni_bridge_mapping.h  llm_jni_original.h  llm_jni_proxy.cpp
breeze-app/gradle/wrapper/: gradle-wrapper.properties
docs/: index.html  refactoring_progress_tracker.md
docs/architecture/: kotlin_arch.md  overview.md  recommended_structure.md
docs/architecture/EdgeAI/: Automatic_Speech_Recognition_API_Spec  Error_Handling.md  Text_to_Speech_API_Spec.md
docs/contributing/: guidelines.md
docs/i18n/: README_en.md  README_zh.md
docs/setup/: installation.md  installation_zh.md  submodules.md  submodules_zh.md
internal_dev/: .gitkeep  BreezeApp-engine_iOS_Ground_Truth_Spec.md  BreezeApp_iOS_Product_Specification.md  BreezeApp_iOS_Technical_Architecture.md  BreezeApp_iOS_UI_UX_Ground_Truth_Spec.md  README.md  overview.md  refactoring_suggestions.md
internal_dev/EdgeAI/: Generate_Chat_Completion_API_Spec.md
(+737 files in other folders)
